crates/strider/tests/snapshots/x64__builtins__popcount32.snap
---
source: crates/strider/tests/v1_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "3" [label="const 0x401250:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "1" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "6" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "1" -> "6" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "1" -> "6" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v7" [label="Post Call\nRAX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v7" [color="#888888", style=dashed];
  "v7" -> "6" [color="#88cc88", label=RAX, fontcolor="#cccccc", fontsize=9];
  "v8" [label="Post Call\nRDX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v8" [color="#888888", style=dashed];
  "v8" -> "6" [color="#88cc88", label=RDX, fontcolor="#cccccc", fontsize=9];
  "v9" [label="Post Call\nXMM0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v9" [color="#888888", style=dashed];
  "v9" -> "6" [color="#88cc88", label=XMM0, fontcolor="#cccccc", fontsize=9];
  "v10" [label="Post Call\nXMM1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v10" [color="#888888", style=dashed];
  "v10" -> "6" [color="#88cc88", label=XMM1, fontcolor="#cccccc", fontsize=9];
  "5" [label="arg[2] ← RDX", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "11" -> "4" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "11" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "12" -> "11" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "12" [label="arg[0] ← RDI", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="StackStore u64\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "13" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v14" [label="init\nRSP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v14" -> "2" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "15" -> "2" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "15" [label="const 0x4011cf:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "13" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
